Thu Jun 30 02:28:11 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_thread_schedule_rec): move interrupt_flag check to
	  rb_thread_schedule().
	  And also rename to rb_thead_schedule_limits() and remove
	  sched_depth argument. It's no longer called recursive.
	* thread.c (rb_thread_schedule): add to check interrupt_flag as
	  above explained.

	* thread.c (rb_threadptr_execute_interrupts_rec): rename to
	  rb_threadptr_execute_interrupts_common() and remove sched_depth
	  argument. It's no longer called recursive.

	* thread.c (rb_thread_sleep): adapt the renaming.
	* thread.c (rb_threadptr_execute_interrupts): ditto.
	* thread.c (rb_thread_execute_interrupts): ditto.

Thu Jun 30 01:31:33 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (thread_s_pass): change RDoc description and remove
	  a sample code. The actual implementaion never behave as explained by
	  an example. It's a documentation bug.

Thu Jun 30 00:54:33 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_thread_stop): change RDoc sample code. The old
	  example is buggy and may cause deadlock. The patch is
	  suggested by Heesob Park <phasis@gmail.com>. Thank you!
	  [Bug #3606][ruby-core:31454]

Thu Jun 30 00:49:53 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_thread_wakeup): change RDoc sample code. The old
	  example is buggy and may not display anything by a race.
	  The patch is suggested by Heesob Parrk <phasis@gmail.com>.
	  Thank you! [Bug #3606][ruby-core:31454]

Thu Jun 30 00:43:33 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_thread_run): change RDoc. The old example is buggy
	  and may cause deadlock. The patch is suggested by Heesob Park
	  <phasis@gmail.com>. Thank you! [Bug #3606][ruby-core:31454]

Thu Jun 30 00:30:15 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* lib/cmath.rb: make same exception for Math. fix [Bug #3137].
