@@ -1,3 +1,8 @@
+Thu Jun 30 02:41:47 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
+
+	* thread.c (rb_thread_schedule_limits): minor optimization.
+	  eliminate machine context saving when running time is enough small.
+
 Thu Jun 30 02:28:11 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
 
 	* thread.c (rb_thread_schedule_rec): move interrupt_flag check to
